<resources>
    <string name="app_name">Creator</string>
    <string name="network_exception">Network error</string>
    <string name="empty_data_exception">Fill in all the fields</string>
    <string name="short_username_exception">Username should be at least 3 characters long</string>
    <string name="username_in_use_exception">This username is already in use</string>
    <string name="user_not_found_exception">User is not found</string>
    <string name="follow_not_found_exception">Follow is not found</string>
    <string name="subscription_not_found_exception">Subscription is not found</string>
    <string name="credit_goal_not_found_exception">Goal is not found</string>
    <string name="invalid_subscription_price_exception">Subscription price must be more than 0 CR-credits</string>
    <string name="invalid_credit_goal_target_balance_price_exception">Target balance must be more than 0 CR-credits</string>
    <string name="invalid_card_number_length_exception">Card number must be 16 characters long</string>
    <string name="invalid_validity_length_exception">Validity must be 4 characters long</string>
    <string name="invalid_cvv_length_exception">CVV must be 3 characters long</string>
    <string name="invalid_transaction_amount_exception">Enter the amount of CR-credit for the transaction</string>
    <string name="duplicate_subscription_title_exception">Subscription with the same title already exists</string>
    <string name="duplicate_tag_name_exception">Tag with the same title already exists</string>
    <string name="duplicate_user_subscription_exception">You already have this subscription</string>
    <string name="email_format_exception">The email address is badly formatted</string>
    <string name="email_verification_exception">Verify your account email</string>
    <string name="email_collision_exception">The email address is already in use by another account</string>
    <string name="unknown_email_exception">There is no user record with this email</string>
    <string name="invalid_password_exception">The password is invalid</string>
    <string name="password_mismatch_exception">Passwords don\'t match</string>
    <string name="weak_password_exception">Password should be at least 6 characters</string>
    <string name="insufficient_funds_in_account_exception">Insufficient funds in the account</string>
    <string name="insufficient_funds_in_goal_exception">Insufficient funds in the goal</string>
    <string name="transaction_not_found_exception">Transaction is not found</string>
    <string name="comment_not_found_exception">Comment is not found</string>
    <string name="post_not_found_exception">Post is not found</string>
    <string name="too_many_requests_exception">The account has been blocked. Reset your password or try again later</string>
    <string name="unknown_exception">Connection error</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_label">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <u><big><font color="#9146FF">Sign Up</font></big></u></string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please, wait…</string>
    <string name="offline_mode">Offline mode</string>
    <string name="verify_your_email">Verify your email</string>
    <string name="email_description"><![CDATA[We have sent the email to <b><font color=#9146FF>%1$s</font></b> to confirm the validity of your email address. After receiving the email, follow the link provided to complete registration]]> </string>
    <string name="_continue">Continue</string>
    <string name="reset_password">Reset password</string>
    <string name="password_recovery_email">Password recovery email sent to your email</string>
    <string name="tell_some_information">Tell us some information about your account</string>
    <string name="blog">Blog</string>
    <string name="my_blog">My blog</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="support">Support</string>
    <string name="downloads">Downloads</string>
    <string name="sign_out">Sign Out</string>
    <string name="three_dots">. . .</string>
    <string name="username">Username</string>
    <string name="id">ID</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="bio">Bio</string>
    <string name="profile_background">Profile background</string>
    <string name="profile_avatar">Profile avatar</string>
    <string name="discover">Discover</string>
    <string name="following">Following</string>
    <string name="search">Search</string>
    <string name="password_recovery">Password recovery</string>
    <string name="CR_credits">CR-credits</string>
    <string name="choose_category">Choose category</string>
    <string name="edit_username_description">You can set a username to make it easier for other people to find you. This name should be unique and at least 3 characters long.</string>
    <string name="edit_bio_description">Write something about your entertainment, plans or activities.</string>
    <string name="edit_username">Edit username</string>
    <string name="edit_bio">Edit bio</string>
    <string name="confirm">Confirm</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
    <string name="economics">Economics</string>
    <string name="politics">Politics</string>
    <string name="health">Health</string>
    <string name="sport">Sport</string>
    <string name="culture">Culture</string>
    <string name="environment">Environment</string>
    <string name="travel">Travel</string>
    <string name="entertainment">Entertainment</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="current_password">Current password</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribed">Subscribed</string>
    <string name="creator_bio">Bio</string>
    <string name="goals">Goals</string>
    <string name="tip">Tip</string>
    <string name="donate">Donate</string>
    <string name="donate_to_credit_goal">Donate to goal</string>
    <string name="close_credit_goal">Close goal</string>
    <string name="posts">Posts</string>
    <string name="follow">Follow</string>
    <string name="follows">Follows</string>
    <string name="followed">Followed</string>
    <string name="publish">Publish</string>
    <string name="creators">Creators</string>
    <string name="no_results_found">No Results Found</string>
    <string name="no_results_found_description">Make sure all words are spelled correctly or try different keywords</string>
    <string name="empty_bio">%s decided not to share information about him(her)self…</string>
    <string name="empty_subscription_list">The subscription list is still empty, but it will be added soon</string>
    <string name="empty_follow_list">The follow list is still empty</string>
    <string name="empty_credit_goal_list">The goal list is still empty, but it will be added soon</string>
    <string name="empty_follow_list_description">Here you can see the creators you are following</string>
    <string name="empty_transaction_list">Here will be your transaction history</string>
    <string name="empty_tag_list">The tag list is still empty, but it will be added soon</string>
    <string name="empty_comment_list">Be the first to share your thoughts</string>
    <string name="empty_tag_list_description">Here you can see the author\'s tags</string>
    <string name="empty_category_list">The category list is still empty, but it will be added soon</string>
    <string name="empty_post_list">The post list is still empty, but it will be added soon</string>
    <string name="add">Add</string>
    <string name="subscribe_for">Subscribe for %d</string>
    <string name="subscribed_until">Subscribed until %s</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="cancel_subscription_question">Are you sure you want to cancel your subscription?</string>
    <string name="cancel_subscription_description">The subscription will no longer be available</string>
    <string name="delete_subscription_question">Are you sure you want to delete your subscription?</string>
    <string name="delete_subscription_description">The subscription will no longer be available to other users, but those who already have it won\'t lose it</string>
    <string name="close_credit_goal_question">Are you sure you want to close your goal?</string>
    <string name="close_credit_goal_description">After the goal is closed, credits will be transferred to your account balance</string>
    <string name="delete_tag_question">Are you sure you want to delete your tag?</string>
    <string name="delete_tag_description">The tag will no longer be available to other users</string>
    <string name="delete_post_question">Are you sure you want to delete your post?</string>
    <string name="delete_post_description">The post will no longer be available to other users</string>
    <string name="no">No</string>
    <string name="yes_cancel">Yes, cancel</string>
    <string name="yes_delete">Yes, delete</string>
    <string name="yes_close">Yes, close</string>
    <string name="new_subscription">New subscription</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="monthly_price">Monthly price</string>
    <string name="tip_amount">Tip amount</string>
    <string name="donate_amount">Donate amount</string>
    <string name="message">Message</string>
    <string name="edit_subscription">Edit subscription</string>
    <string name="edit_credit_goal">Edit goal</string>
    <string name="save_changes">Save changes</string>
    <string name="options">Options</string>
    <string name="delete">Delete</string>
    <string name="subscription_created_successfully">Subscription created successfully</string>
    <string name="subscription_edited_successfully">Subscription edited successfully</string>
    <string name="credit_goal_created_successfully">Goal created successfully</string>
    <string name="credit_goal_edited_successfully">Goal edited successfully</string>
    <string name="tag_created_successfully">Tag created successfully</string>
    <string name="tag_edited_successfully">Tag edited successfully</string>
    <string name="subscription_purchased_successfully">Subscription purchased successfully</string>
    <string name="post_published_successfully">Post published successfully</string>
    <string name="post_edited_successfully">Post edited successfully</string>
    <string name="tip_sent_successfully">Tip sent successfully</string>
    <string name="donate_sent_successfully">Donate sent successfully</string>
    <string name="purchase_subscription">Purchase subscription</string>
    <string name="purchase">Purchase</string>
    <string name="filter">Filter</string>
    <string name="post_type">Post type</string>
    <string name="tags">Tags</string>
    <string name="all_posts">All posts</string>
    <string name="any_tags">Any tags</string>
    <string name="any_categories">Any categories</string>
    <string name="categories">Categories</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
</resources>