<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="?android:windowBackground"
    app:cardCornerRadius="@dimen/base_margin_size">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/base_margin_size">

        <TextView
            android:id="@+id/textViewTitle"
            style="@style/ExtraLargeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/cancel_subscription_question"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewDescription"
            style="@style/BaseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin_size"
            android:gravity="center_horizontal"
            android:text="@string/cancel_subscription_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

        <TextView
            android:id="@+id/textViewYes"
            style="@style/LargeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin_size"
            android:text="@string/yes_cancel"
            android:textColor="@color/colorError"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewNo"
            app:layout_constraintTop_toBottomOf="@id/textViewDescription" />

        <TextView
            android:id="@+id/textViewNo"
            style="@style/LargeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/textViewYes"
            app:layout_constraintEnd_toStartOf="@id/textViewYes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewYes" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
