<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:windowBackground"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewTitle"
            style="@style/TitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin_size"
            android:text="@string/filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewPostTypeLabel"
            style="@style/LargeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/base_margin_size"
            android:layout_marginTop="@dimen/base_margin_size"
            android:text="@string/post_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

        <TextView
            android:id="@+id/textViewPostType"
            style="@style/LargeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/base_margin_size"
            android:layout_marginTop="@dimen/medium_margin_size"
            android:background="@drawable/container_background"
            android:paddingHorizontal="@dimen/base_margin_size"
            android:paddingVertical="@dimen/base_margin_size"
            android:text="@string/all_posts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewPostTypeLabel" />

        <ImageView
            android:layout_width="@dimen/small_icon_size"
            android:layout_height="@dimen/small_icon_size"
            android:layout_marginEnd="@dimen/base_margin_size"
            android:importantForAccessibility="no"
            android:scaleX="-1"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/textViewPostType"
            app:layout_constraintEnd_toEndOf="@id/textViewPostType"
            app:layout_constraintTop_toTopOf="@id/textViewPostType" />

        <TextView
            android:id="@+id/textViewTagLabel"
            style="@style/LargeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/base_margin_size"
            android:layout_marginTop="@dimen/base_margin_size"
            android:text="@string/tags"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewPostType" />

        <TextView
            android:id="@+id/textViewTag"
            style="@style/LargeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/base_margin_size"
            android:layout_marginTop="@dimen/medium_margin_size"
            android:background="@drawable/container_background"
            android:paddingHorizontal="@dimen/base_margin_size"
            android:paddingVertical="@dimen/base_margin_size"
            android:text="@string/any_tags"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTagLabel" />

        <ImageView
            android:layout_width="@dimen/small_icon_size"
            android:layout_height="@dimen/small_icon_size"
            android:layout_marginEnd="@dimen/base_margin_size"
            android:importantForAccessibility="no"
            android:scaleX="-1"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/textViewTag"
            app:layout_constraintEnd_toEndOf="@id/textViewTag"
            app:layout_constraintTop_toTopOf="@id/textViewTag" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/base_margin_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTag" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>